# tagged_dispatch

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  PUBLISHING.md  README.md
.github/workflows/: ci.yml  rust.yml
src/: lib.rs
tagged_dispatch_macros/: Cargo.toml
tagged_dispatch_macros/src/: lib.rs
tests/: arena_builder.rs  default_implementations.rs  mixed_scenarios.rs  multiple_traits.rs  no_dispatch.rs  simple_arena_test.rs  trait_implementations.rs  trait_opt_out.rs
