[package]
name = "tagged_dispatch_macros"
version = "0.1.3"
authors = ["Jon Davis <khalen@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Procedural macros for memory-efficient trait dispatch using tagged pointers"
documentation = "https://docs.rs/tagged_dispatch_macros"
repository = "https://github.com/khalen/tagged_dispatch"
# readme is omitted for proc-macro crates as they typically don't need separate docs

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
heck = "0.4" # For case conversion

[features]
default = []
# Mirror the allocator features from the main crate
allocator-bumpalo = []
allocator-typed-arena = []

